# bert.cpp

./: .gitignore  Makefile  README.md  pyproject.toml  setting_jupyter_kernel_with_poetry.md
src/python/: dataset.py  main.py  model.py  trainer.py
