[tool.poetry]
name = "bert-cpp"
version = "0.1.0"
description = "Training BERT"
authors = ["Your Name <you@example.com>"]
license = "Apache 2.0"
readme = "README.md"
packages = [{include = "bert"}]

[tool.poetry.dependencies]
python = "^3.10"
black = "^24.8.0"
ipykernel = "^6.29.5"
jupyter = "^1.0.0"
pandas = "^2.2.2"
numpy = "<2.0"
torch = "2.2.0"
torchtext = "0.17.0"
tensorboard = "^2.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
